--- a/.env.example
+++ b/.env.example
@@ -7,7 +7,7 @@ POSTGRES_HOST=localhost
 POSTGRES_PORT=6543
 POSTGRES_USER=postgres
 POSTGRES_PASSWORD="Abcd@12345678"
-POSTGRES_DB="research_nestjs"
+POSTGRES_DB="orkes-conductor"
 
 ### Datbase 
 DATABASE_SYNC=true
@@ -19,3 +19,9 @@ JWT_REFRESH_SECRET="refresh123"
 JWT_REFRESH_EXPIRATION_TIME=3600
 
 DATABASE_URL="postgresql://postgres:12345678@localhost:5432/mydb?schema=public"
+
+### Kafka connection
+KAFKA_BROKER_URI=""
+KAFKA_CONSUMER_GROUP_ID=""
+KAFKA_USERNAME=""
+KAFKA_PASSWORD=""
