--- a/docker-compose.config.yml
+++ b/docker-compose.config.yml
@@ -15,29 +15,19 @@ services:
       POSTGRES_PASSWORD: Abcd@12345678
       POSTGRES_DB: chatapp_db
     volumes:
-      - postgres-data:/var/lib/postgresql/data
+      - ./.docker/postgres-data:/var/lib/postgresql/data
 
-  kafka-ui:
-    container_name: kafka-ui
-    image: provectuslabs/kafka-ui:latest
+  zookeeper:
+    container_name: zookeeper
+    image: bitnami/zookeeper:latest
     ports:
-      - 8080:8080
+      - '2181:2181'
     environment:
-      DYNAMIC_CONFIG_ENABLED: true
+      ZOOKEEPER_CLIENT_PORT: 2181
+      ZOOKEEPER_TICK_TIME: 2000
+      ALLOW_ANONYMOUS_LOGIN: true
     volumes:
-      - ./kui/config.yml:/etc/kafkaui/dynamic_config.yaml
-
-  # zookeeper:
-  #   container_name: zookeeper
-  #   image: bitnami/zookeeper:latest
-  #   ports:
-  #     - '2181:2181'
-  #   environment:
-  #     ZOOKEEPER_CLIENT_PORT: 2181
-  #     ZOOKEEPER_TICK_TIME: 2000
-  #     ALLOW_ANONYMOUS_LOGIN: true
-  #   volumes:
-  #     - ./bitnami/zookeeper:/bitnami/zookeeper
+      - ./.docker/bitnami/zookeeper:/bitnami/zookeeper
 
   kafdrop:
     image: obsidiandynamics/kafdrop
@@ -48,12 +38,14 @@ services:
       KAFKA_BROKERCONNECT: 'kafka:29092'
     depends_on:
       - 'kafka'
+    volumes:
+      - ./.docker/kui/config.yml:/config.yml
 
   kafka:
     image: obsidiandynamics/kafka
-    restart: 'no'
+    restart: 'always'
     ports:
-      - '2181:2181'
+      - '9093:9093'
       - '9092:9092'
     environment:
       KAFKA_LISTENERS: 'INTERNAL://:29092,EXTERNAL://:9092'
